<resources>
    <string name="app_name">Sunflower PRs</string>
    <string name="label_owner">Owner :</string>
    <string name="label_created_at">Created at :</string>
    <string name="label_closed_at">Closed at :</string>
    <string name="refresh">Refresh</string>
    <string name="user_image">UserImage</string>
    <string name="oops_no_internet">Oops! No internet</string>
    <string name="no_internet_msg">You don\'t have internet connection\nplease connect and retry!</string>
    <string name="retry">Retry</string>
    <string name="no_internet_icon">No internet icon</string>
    <string name="oops_limit_exceed">Oops! Limit exceed</string>
    <string name="limit_exceed_msg">You have exceed the request limit, please retry after sometime.</string>
</resources>