<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingVertical="18dp">

    <ImageView
        android:id="@+id/errorIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/no_internet_icon"
        tools:src="@drawable/ic_no_internet" />

    <TextView
        android:id="@+id/errorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:text="@string/oops_no_internet" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textAlignment="center"
        android:textColor="@color/black_500"
        tools:text="@string/no_internet_msg" />

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/retry"
        android:textColor="@color/white" />

</LinearLayout>